// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserInfoComponent should compile 1`] = `
<app-user-info
  folowing={[Function EventEmitter]}
  isUser="false"
  profile={[Function Object]}
>
  <div
    class="user-info"
  >
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col-xs-12 col-md-10 offset-md-1"
        >
          <mat-card
            class="mat-card"
          >
            <mat-card-header
              class="mat-card-header"
            >
              <div
                class="user-info__avatar mat-card-avatar"
                mat-card-avatar=""
              >
                <img
                  alt="username"
                  appavatar=""
                  src="image"
                />
              </div>
              <div
                class="mat-card-header-text"
              >
                <mat-card-title
                  class="mat-card-title"
                >
                  username
                </mat-card-title>
                <mat-card-subtitle
                  class="mat-card-subtitle"
                >
                  bio  
                </mat-card-subtitle>
              </div>
            </mat-card-header>
            <mat-card-content
              class="mat-card-content"
            >
              <button
                class="mat-stroked-button"
                hidden=""
                mat-stroked-button=""
                routerlink="/settings"
              >
                <span
                  class="mat-button-wrapper"
                >
                  conduit.profile.settingsButton
                </span>
                <div
                  class="mat-button-ripple mat-ripple"
                  matripple=""
                  ng-reflect-centered="false"
                  ng-reflect-disabled="false"
                  ng-reflect-trigger="[object HTMLButtonElement]"
                />
                <div
                  class="mat-button-focus-overlay"
                />
              </button>
              <app-follow-button
                ng-reflect-followed="false"
                ng-reflect-is-loading="false"
              >
                <button
                  class="mat-stroked-button mat-primary"
                  mat-stroked-button=""
                  ng-reflect-color="primary"
                  ng-reflect-disabled="false"
                >
                  <span
                    class="mat-button-wrapper"
                  >
                     conduit.followButton.follow 
                     username 
                  </span>
                  <div
                    class="mat-button-ripple mat-ripple"
                    matripple=""
                    ng-reflect-centered="false"
                    ng-reflect-disabled="false"
                    ng-reflect-trigger="[object HTMLButtonElement]"
                  />
                  <div
                    class="mat-button-focus-overlay"
                  />
                </button>
              </app-follow-button>
            </mat-card-content>
          </mat-card>
        </div>
      </div>
    </div>
  </div>
</app-user-info>
`;

exports[`UserInfoComponent should show edit profile settings button by "isUser" @Input equals to true 1`] = `
<app-user-info
  folowing={[Function EventEmitter]}
  isUser={[Function Boolean]}
  profile={[Function Object]}
>
  <div
    class="user-info"
  >
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col-xs-12 col-md-10 offset-md-1"
        >
          <mat-card
            class="mat-card"
          >
            <mat-card-header
              class="mat-card-header"
            >
              <div
                class="user-info__avatar mat-card-avatar"
                mat-card-avatar=""
              >
                <img
                  alt="username"
                  appavatar=""
                  src="image"
                />
              </div>
              <div
                class="mat-card-header-text"
              >
                <mat-card-title
                  class="mat-card-title"
                >
                  username
                </mat-card-title>
                <mat-card-subtitle
                  class="mat-card-subtitle"
                >
                  bio  
                </mat-card-subtitle>
              </div>
            </mat-card-header>
            <mat-card-content
              class="mat-card-content"
            >
              <button
                class="mat-stroked-button"
                mat-stroked-button=""
                routerlink="/settings"
              >
                <span
                  class="mat-button-wrapper"
                >
                  conduit.profile.settingsButton
                </span>
                <div
                  class="mat-button-ripple mat-ripple"
                  matripple=""
                  ng-reflect-centered="false"
                  ng-reflect-disabled="false"
                  ng-reflect-trigger="[object HTMLButtonElement]"
                />
                <div
                  class="mat-button-focus-overlay"
                />
              </button>
              <app-follow-button
                hidden=""
                ng-reflect-followed="false"
                ng-reflect-is-loading="false"
              >
                <button
                  class="mat-stroked-button mat-primary"
                  mat-stroked-button=""
                  ng-reflect-color="primary"
                  ng-reflect-disabled="false"
                >
                  <span
                    class="mat-button-wrapper"
                  >
                     conduit.followButton.follow 
                     username 
                  </span>
                  <div
                    class="mat-button-ripple mat-ripple"
                    matripple=""
                    ng-reflect-centered="false"
                    ng-reflect-disabled="false"
                    ng-reflect-trigger="[object HTMLButtonElement]"
                  />
                  <div
                    class="mat-button-focus-overlay"
                  />
                </button>
              </app-follow-button>
            </mat-card-content>
          </mat-card>
        </div>
      </div>
    </div>
  </div>
</app-user-info>
`;

exports[`UserInfoComponent should show following button by "isUser" @Input equals to false 1`] = `
<app-user-info
  folowing={[Function EventEmitter]}
  isUser="false"
  profile={[Function Object]}
>
  <div
    class="user-info"
  >
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col-xs-12 col-md-10 offset-md-1"
        >
          <mat-card
            class="mat-card"
          >
            <mat-card-header
              class="mat-card-header"
            >
              <div
                class="user-info__avatar mat-card-avatar"
                mat-card-avatar=""
              >
                <img
                  alt="username"
                  appavatar=""
                  src="image"
                />
              </div>
              <div
                class="mat-card-header-text"
              >
                <mat-card-title
                  class="mat-card-title"
                >
                  username
                </mat-card-title>
                <mat-card-subtitle
                  class="mat-card-subtitle"
                >
                  bio  
                </mat-card-subtitle>
              </div>
            </mat-card-header>
            <mat-card-content
              class="mat-card-content"
            >
              <button
                class="mat-stroked-button"
                hidden=""
                mat-stroked-button=""
                routerlink="/settings"
              >
                <span
                  class="mat-button-wrapper"
                >
                  conduit.profile.settingsButton
                </span>
                <div
                  class="mat-button-ripple mat-ripple"
                  matripple=""
                  ng-reflect-centered="false"
                  ng-reflect-disabled="false"
                  ng-reflect-trigger="[object HTMLButtonElement]"
                />
                <div
                  class="mat-button-focus-overlay"
                />
              </button>
              <app-follow-button
                ng-reflect-followed="false"
                ng-reflect-is-loading="false"
              >
                <button
                  class="mat-stroked-button mat-primary"
                  mat-stroked-button=""
                  ng-reflect-color="primary"
                  ng-reflect-disabled="false"
                >
                  <span
                    class="mat-button-wrapper"
                  >
                     conduit.followButton.follow 
                     username 
                  </span>
                  <div
                    class="mat-button-ripple mat-ripple"
                    matripple=""
                    ng-reflect-centered="false"
                    ng-reflect-disabled="false"
                    ng-reflect-trigger="[object HTMLButtonElement]"
                  />
                  <div
                    class="mat-button-focus-overlay"
                  />
                </button>
              </app-follow-button>
            </mat-card-content>
          </mat-card>
        </div>
      </div>
    </div>
  </div>
</app-user-info>
`;
